update html notes

--- a/graph/templates/graph/local_covid.html
+++ b/graph/templates/graph/local_covid.html
@@ -386,15 +386,15 @@
   <br />
 
 Infection was spreading widely in the UK long before people started dying from COVID-19. With inconsistent and low volumes of testing for COVID-19, the best method available for working out infections is working back from deaths that follow approx 3 weeks later. 
-
-Notes: 
+<p><p>
+Notes:<p> 
 
 * Estimated new infections [LEFT AXIS]: a Reuters crude estimate based on:  a) 1% infection fatality rate (most studies currently show IFR at 0.5%-1%) and average time from infection to death of approx. 3 weeks . The IFR will vary based on age distribution, so the number of infections is likely an over-estimate in later stages of outbreak when, in most areas, infection spread into care homes.
 <p>
 * Test with a positive Covid result [RIGHT AXIS]- these are tests carried out in Public Health England NHS labs. Pillar 2 tests carried out in private "Lighthouse" labs are not included, and have formed an increasing portion of the tests. We await data from these.
 
 <p>
-* Deaths [RIGHT AXIS] - derived from Office National Statistics data of deaths where COVID-19 listed as a cause of death, location by usual place of residence (not place of death). This figure is significantly below recorded excess deaths for the time of year, suggesting the Covid19 figures are an under-estimate.
+* Deaths [RIGHT AXIS] - derived from death certificates where COVID-19 is listed as a cause of death, location by usual place of residence (not place of death). This figure is significantly below recorded excess deaths for the time of year, suggesting the Covid19 figures are an under-estimate.
 <p>
 
 
