--- a/graph/templates/graph/local_covid.html
+++ b/graph/templates/graph/local_covid.html
@@ -3,9 +3,15 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
 
 
+<h1>COVID Kingdom: the Reuters UK <b>COVID-19 Tracker</b></h1>
+<p><p>
+<h3>This interactive graphic shows how the local pattern of how the coronavirus spread through Britain. 
+Select below a county, city or London borough and see the patterns of tests, deaths, and the Reuters estimate of when infections arrived.
+</h3><p>
+Read our full investigation here:  <a href="https://www.reuters.com/investigates/special-report/health-coronavirus-britain-tracing/">Into the fog: How Britain lost track of the coronavirus</a>
 
 <div class="container">
-  <br />
+
   <div class="row">
   	<div style="width:75%; height:50%">
     <div class="col-md-1"></div>
@@ -382,6 +388,8 @@
 </select>
 </div>
 
+
+
 <div class="container">
   <br />
 
@@ -396,9 +404,10 @@ Notes:<p>
 <p>
 * Deaths [RIGHT AXIS] - derived from death certificates where COVID-19 is listed as a cause of death, location by usual place of residence (not place of death). This figure is significantly below recorded excess deaths for the time of year, suggesting the Covid19 figures are an under-estimate.
 <p>
-
-
-
+ 
+Source: XXXXXXX
+Data: Ryan McNeil
+Chart/programming: Stephen Grey
 
 
 </div>
