--- a/graph/templates/graph/covid_chart.html
+++ b/graph/templates/graph/covid_chart.html
@@ -465,7 +465,7 @@ function draw_chart(chart_title,series1,series2,series3,series4,label1,label2,la
     	type: 'line',
     	data: {
         	labels: [
-			'Feb 14','Feb 21','Mar 6','Mar 13','Mar 20', 'Mar 27','Apr 3','Apr 10','Apr 24','May 1','May 8','May 15','May 22','May 29','June 5', 'June 12',
+			'Feb 7','Feb 14','Feb 21','Mar 6','Mar 13','Mar 20', 'Mar 27','Apr 3','Apr 10','Apr 24','May 1','May 8','May 15','May 22','May 29','June 5', 'June 12','June 17',
 					],
         	datasets: [
         		{
