--- a/graph/templates/graph/covid_chart.html
+++ b/graph/templates/graph/covid_chart.html
@@ -7,7 +7,7 @@
 
 
 <div class="container">
-<h1>COVID Kingdom: the Reuters UK <b>COVID-19 Tracker</b></h1>
+<h1>COVID Kingdom: the UK <b>COVID-19 Tracker</b></h1>
 <p><p>
 <h4>This interactive graphic shows the local pattern of how the coronavirus spread through Britain. 
 Select below a county, city or London borough and see the patterns of tests, deaths, and the Reuters estimate of when infections arrived.
@@ -411,6 +411,7 @@ Infection was spreading widely in the UK long before people started dying from C
 <p><p>
 Notes:<p> 
 
+
 * Estimated new infections [LEFT AXIS]: a Reuters rough estimate based on a 1% infection fatality rate (IFR) [Most studies currently show IFR at 0.5%-1%] and average time from infection to death of approximately 3 weeks . The IFR will vary based on age distribution, so the number of infections is likely an over-estimate in the later stages of the outbreak when, in most areas, infection spread into care homes.
 <p>
 * Tests with a positive COVID-19 result [RIGHT AXIS]: these are tests carried out in Public Health England NHS labs. Pillar 2 tests carried out in private "Lighthouse" labs are not included, and have formed an increasing portion of the tests. We await data from these.
@@ -418,9 +419,10 @@ Notes:<p>
 <p>
 * Deaths [RIGHT AXIS]: derived from death certificates where COVID-19 is listed as a cause of death. Location is by usual place of residence (not place of death). This figure is significantly below recorded excess deaths for the time of year, suggesting the COVID-19 figures are an under-estimate.
 <p>
+* All etimates are unreliable in areas with few deaths, e.g. the City of London.<p> 
  
 Source: Office of National Statistics; National Records of Scotland; Northern Ireland Statistics and Research Agency; Public Health England; Public Health Wales; Scottish government.<p>
-Data analysis: Ryan McNeil. Chart/programming: Stephen Grey
+Data analysis: <a href="https://twitter.com/McNeill_Tweets">Ryan McNeill</a>. Chart/programming: <a href="https://twitter.com/StephenGrey">Stephen Grey</a>
 
 </div>
 
