--- a/graph/templates/graph/covid_chart.html
+++ b/graph/templates/graph/covid_chart.html
@@ -419,7 +419,7 @@ Notes:<p>
 <p>
 * Deaths [RIGHT AXIS]: derived from death certificates where COVID-19 is listed as a cause of death. Location is by usual place of residence (not place of death). This figure is significantly below recorded excess deaths for the time of year, suggesting the COVID-19 figures are an under-estimate.
 <p>
-* All etimates are unreliable in areas with few deaths, e.g. the City of London.<p> 
+* All estimates are unreliable in areas with few deaths, e.g. the City of London.<p> 
  
 Source: Office of National Statistics; National Records of Scotland; Northern Ireland Statistics and Research Agency; Public Health England; Public Health Wales; Scottish government.<p>
 Data analysis: <a href="https://twitter.com/McNeill_Tweets">Ryan McNeill</a>. Chart/programming: <a href="https://twitter.com/StephenGrey">Stephen Grey</a>
