add base.html for analytics

--- a/graph/templates/graph/covid_chart.html
+++ b/graph/templates/graph/covid_chart.html
@@ -1,3 +1,6 @@
+{% extends "graph/base.html" %}
+{% block body_content %}
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <!--<script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js'></script>-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
@@ -666,3 +669,4 @@ updateNation();
 
 </script>
 
+{% endblock %}
