--- a/graph/templates/graph/covid_chart.html
+++ b/graph/templates/graph/covid_chart.html
@@ -482,6 +482,7 @@ function draw_chart(chart_title,series1,series2,series3,series4,label1,label2,la
         		{
             		label: label1,
             		data: series1,
+            		borderDash: [10,5],
             		backgroundColor: [
 					'rgba(255, 229, 204,0.4)',
             		],
