--- a/graph/templates/graph/covid_chart.html
+++ b/graph/templates/graph/covid_chart.html
@@ -25,7 +25,7 @@ margin-left: -10vw;
 <div class="container">
 	<h1>COVID Kingdom: the UK <b>COVID-19 Tracker</b></h1>
 	<p><p>
-	<h4>This interactive graphic shows the local pattern of how the coronavirus spread through Britain. 
+	<h4>Explore how the coronavirus spread through Britain. 
 Select below a county, city or London borough and see the patterns of tests, deaths, and the Reuters estimate of when infections arrived.
 	</h4><h6>Click on the points for the data.</h6><br>
 Read our full investigation here:  <a href="https://www.reuters.com/investigates/special-report/health-coronavirus-britain-tracing/">Into the fog: How Britain lost track of the coronavirus</a>
