advance week fix hackney

--- a/graph/templates/graph/covid_chart2.html
+++ b/graph/templates/graph/covid_chart2.html
@@ -131,7 +131,7 @@ Read our full investigation here:  <a href="https://www.reuters.com/investigates
 <option value="Chesterfield" data-tag="1">Chesterfield</option>
 <option value="Chichester" data-tag="1">Chichester</option>
 <option value="Chorley" data-tag="1">Chorley</option>
-<option value="City of London" data-tag="1">City of London</option>
+<option value="Hackney and City of London" data-tag="1">City of London</option>
 <option value="Colchester" data-tag="1">Colchester</option>
 <option value="Copeland" data-tag="1">Copeland</option>
 <option value="Corby" data-tag="1">Corby</option>
@@ -184,7 +184,7 @@ Read our full investigation here:  <a href="https://www.reuters.com/investigates
 <option value="Great Yarmouth" data-tag="1">Great Yarmouth</option>
 <option value="Greenwich" data-tag="1">Greenwich</option>
 <option value="Guildford" data-tag="1">Guildford</option>
-<option value="Hackney" data-tag="1">Hackney</option>
+<option value="Hackney and City of London" data-tag="1">Hackney</option>
 <option value="Halton" data-tag="1">Halton</option>
 <option value="Hambleton" data-tag="1">Hambleton</option>
 <option value="Hammersmith and Fulham" data-tag="1">Hammersmith and Fulham</option>
