--- a/graph/templates/graph/covid_chart_map.html
+++ b/graph/templates/graph/covid_chart_map.html
@@ -85,8 +85,7 @@ margin-left: -10vw;
 		
 
 		
-	<h4>Explore how the coronavirus spread through Britain. 
-Select below a county, city or London borough and see the patterns of tests, deaths, and the Reuters estimate of when infections arrived.</h4>
+	<h4>Explore the map of latest Covid-19 cases in Britain - and select an area on the map (or in the menu below) to see how the virus spread through Britain, including the patterns of tests, excess deaths, and the Reuters estimate of when infections arrived.</h4>
 
   	<div class="row">
   		<div class="col-md-1">
