--- a/graph/templates/graph/covid_chart_map.html
+++ b/graph/templates/graph/covid_chart_map.html
@@ -49,8 +49,11 @@ margin-left: -10vw;
 }
 </style>
 
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" /> 
-
+<!--<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" /> 
+-->
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+   integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+   crossorigin=""/>
 
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 -->
@@ -61,8 +64,15 @@ margin-left: -10vw;
 -->
 
 <script src="{% static 'graph/js/d3.v3.min.js' %}"></script>
-<script src="{% static 'graph/js/leaflet.js' %}"></script>
-<script src="{% static 'graph/js/tile.stamen.js' %}"></script>
+
+<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+   integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+   crossorigin=""></script>
+<!--<script src="{% static 'graph/js/leaflet.js' %}"></script>
+-->
+
+<!--<script src="{% static 'graph/js/tile.stamen.js' %}"></script>
+-->
 <script src="{% static 'graph/js/topojson.v1.min.js' %}"></script>
 
 <script src="{% static 'graph/js/Chart.min.js' %}"></script>
@@ -533,7 +543,7 @@ loadmap("{{place}}");
 get_data("{{place}}");
 var sel2 = document.getElementById("Filter2");
 selectOption(sel2,"{{nation_index}}");
-updateNation();
+//updateNation();
 var sel = document.getElementById("Filter{{nation}}");
 selectOption(sel, "{{place}}");
 };
