--- a/graph/templates/graph/covid_chart_map.html
+++ b/graph/templates/graph/covid_chart_map.html
@@ -19,8 +19,9 @@ margin-left: -10vw;
 <style>
   
   #mapid {
-     height: 350px;
-     width: 1200px;
+     margin: auto;
+     height: 650px;
+     width: 700px;
      background:white;  }
   .MainTitle {
      font: 28px Helvetica, sans-serif;
@@ -489,7 +490,11 @@ margin-left: -10vw;
 </div>
 <br><br>
 <p>
+<div class="container">
+<div class="mainmap">
 <div id="mapid"></div>
+</div>
+</div>
 <p>
 
 </div>
